# TrueCoder

./: .env.example  .gitignore  README.md  pyproject.toml
src/truecoder/: __main__.py
src/truecoder/agent/: __init__.py  agent.py  context.py  events.py  prompt.py  state.py
src/truecoder/client/: llm_client.py  response.py
src/truecoder/tools/: __init__.py  base.py  executor.py  registry.py
src/truecoder/tools/builtin/: __init__.py  read_file.py
src/truecoder/tui/: __init__.py  app.py  styles.tcss  widgets.py
tests/: test_agent.py  test_llm_client.py  test_tui.py
tests/unit/agent/: test_agent.py  test_composition.py  test_state.py
tests/unit/client/: test_llm_client.py
tests/unit/context/: test_context.py
tests/unit/tools/: __init__.py  test_base.py  test_executor.py  test_registry.py
tests/unit/tools/builtin/: test_read_file.py
tests/unit/tui/: test_app.py
