[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "truecoder"
version = "0.1.0"
description = "TrueCoder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.46",
    "python-dotenv>=1.2",
    "textual>=8.2,<9",
]

[project.scripts]
truecoder = "truecoder.agent.agent:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
truecoder = ["tui/*.tcss"]
